StarSpan ChangeLog
$Id$


2008-05-01,02
    - Refactoring miniraster strip creation to allow duplicate pixel handling:
      - MiniRasterObserver: no Traverser as a member any more.
      - IntersectionInfo: now includes the traverser.
      - MiniRasterStripObserver: setOutVector() and setOutVectorDirectly()
        to allow association of output vector either with no ownership or with
        ownership.
      - MiniRasterStripObserver.create_strip() removed. Instead, this functionality
        was moved to new utility starspan_create_strip().
      - New starspan_getMiniRasterStripObserver2() and starspan_minirasterstrip2()
        to handle the generation of the strip with duplicate_pixel modes.
      - TODO: complete preliminary tests.
    
    
2008-04-24
    - GRASS interface documentation updated in web site: 
        http://starspan.casil.ucdavis.edu/doku/doku.php?id=grass

    - Rasterization process documented in: 
        http://starspan.casil.ucdavis.edu/doku/doku.php?id=rasterization
      --rasterize option still internal for testing purposes.
      Also added rasterize command to GRASS interface to facilitate this
      testing, although the GDAL GRASS driver cannot create new GRASS rasters;
      using ENVI for output rasters for now.

2008-04-22
    - Implemented grass interface commands:
        report
        csv
        
    - Each command is GRASS-configured individually so it is better dispatched
      in terms of pertinent options. Also, the command can be dispached from
      the GRASS GUI, including selection according to input map: vector or raster.
        
        
      NOTE: starspan_dup_pixel() was segfaulting with versions geos 2.2.3 and
      gdal 1.5.0. Just updated geos to 3.0.0 (on pegasus) and problem fixed. 
            
       
        
2008-04-21
    - New starspan_grass.cc: preliminaries for providing a GRASS interface.
    
2008-04-18
    - New starspan_rasterize.cc: goal: do some basic comparisons with the