@@ -2,6 +2,16 @@ StarSpan ChangeLog
 $Id$
 
 
+2008-05-07
+    - Since starspan now checks that the projection of the input datasets be
+      the same, I converted the polygon shapefile for the current tests to
+      match the projection of the raster files:
+        cd tests/data/vector
+        ogr2ogr -t_srs "+proj=utm +zone=10 +ellps=WGS84 +datum=WGS84 +units=m +no_defs" \
+        ply/ply.shp starspan_testply.shp
+      Also converted the other shapefiles for future use.
+      (cd tests && make) # -> OK
+                 
 2008-05-01,02
     - Refactoring miniraster strip creation to allow duplicate pixel handling:
       - MiniRasterObserver: no Traverser as a member any more.
